# modular_grid_scraper

./: Cargo.toml
src/: main.rs
