[package]
name = "modular_grid_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
voyager = { version = "0.2.1" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.55"
futures = "0.3.21"
log = "0.4.14"